@@ -140,7 +140,9 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_EMAPS_MappingChecks.sql.rpt">Checks of the EMAPS:AD mapping table</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_EMAPS_MappingAdUnmappedChecks.rpt">AD terms that do not map to EMAPS IDs</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_EMAPS_MappingNameChecks.rpt">AD/EMAPS mapping pairs whose term names do not match</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_Mouse_Developmental_Anatomy.rpt">Mouse Developmental Anatomy</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_Mouse_Developmental_Anatomy.rpt">Anatomical Dictionary Terms</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_EMAPA_Terms.rpt">EMAPA Terms</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_EMAPS_Terms.rpt">EMAPS Terms</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_CellLine.sql.rpt">Cell Lines</A>
 <LI><A HREF="/data/reports/qcreports_db/archive/gxd">Archived GXD Reports</A>
 </OL>
