@@ -8,6 +8,10 @@ c) TR11597/mgd/GXD_ExpPresNotPres.py
 d) TR11597/mgd/GXD_ChildExpNotParent.py
 e) TR11597/mgd/GXD_ImageJPG.sql
 f) TR11597/mgd/GXD_ImageSpecimen.py
+g) TR11597/mgd/GXD_Stats.py
+h) TR11597/mgd/GXD_Mouse_Development_Anatomy.py
+i) TR11597/weekly/GXD_EMAPA_Terms.py
+j) TR11597/weekly/GXD_EMAPS_Terms.py
 
 TAG: qcreports_db-5-1-8-1
 DATE: 03/06/2014
